# logbook

./: README.md  default.nix  logbook.cabal  logbook.nix
etc/: AircraftEngine.hs  Event.hs  notes  todo
src/: Util.hs
src-exe/: Main.hs
src/Data/Aviation/Casr/: Logbook.hs
src/Data/Aviation/Casr/Logbook/: Types.hs
src/Data/Aviation/Casr/Logbook/Types/: Aircraft.hs  Media.hs
src/Data/Aviation/Casr/Logbook/Types/Aeroplane/: AeroplaneDesignFeature.hs  Aircraft.hs  AircraftCategory.hs  AircraftRegistration.hs  AirshipDesignFeature.hs  CASARegistration.hs  DecDigit4.hs  GyroplaneDesignFeature.hs  HelicopterDesignFeature.hs  JetType.hs  LandingGear.hs  Propulsion.hs  PropulsionPosition.hs  PropulsionType.hs  Propulsions.hs  Propulsions1.hs  RAAusRegistration.hs  RAAusRegistrationPrefix.hs  RAAusRegistrationType.hs  RPACategory.hs
src/Data/Aviation/Casr/Logbook/Types/Aircraft/: AeroplaneDesignFeature.hs  AeroplaneDesignFeatures.hs  Aircraft.hs  AircraftCategory.hs  AircraftRegistration.hs  AirshipDesignFeature.hs  AirshipDesignFeatures.hs  CASARegistration.hs  DecDigit4.hs  DecDigits4.hs  GyroplaneDesignFeature.hs  GyroplaneDesignFeatures.hs  HelicopterDesignFeature.hs  HelicopterDesignFeatures.hs  JetType.hs  LandingGear.hs  MTOW.hs  Propulsion.hs  PropulsionPosition.hs  PropulsionType.hs  Propulsions.hs  Propulsions1.hs  RAAusRegistration.hs  RAAusRegistrationPrefix.hs  RAAusRegistrationType.hs  RPACategory.hs
src/Data/Aviation/Casr/Logbook/Types/Aircraft/Propulsion/: ElectricType.hs  Engine.hs  EngineDisplacement.hs  EngineType.hs  InternalCombustionEngine.hs  InternalCombustionEngineAirInduction.hs  InternalCombustionEngineFuelInduction.hs  InternalCombustionEngineIgnition.hs  InternalCombustionEngineType.hs  JetType.hs  PistonEngine.hs  PistonEngineConfiguration.hs  PistonEngineCycle.hs  Propulsion.hs  PropulsionPosition.hs  Propulsions.hs  Propulsions1.hs  RotaryEngine.hs  Rotors.hs
src/Data/Aviation/Casr/Logbook/Types/Media/: Image.hs  ImageType.hs  MediaType.hs
test/: Tests.hs
