name:               logbook
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
copyright:          Copyright (c) 2018, Tony Morris
synopsis:           Australian Pilot logbook
category:           Data, Aviation
description:       
  Autralia Pilot logbook
homepage:           https://github.com/tonymorris/casr-logbook
bug-reports:        https://github.com/tonymorris/casr-logbook/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/casr-logbook/issues.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , digit >= 0.7 && < 0.8
                    , HTTP >= 4000 && < 5000
                    , lens >= 4 && < 5
                    , network-uri >= 2.6 && < 3
                    , semigroups >= 0.9 && < 0.19
                    , semigroupoids >= 5.2 && < 6
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , deriving-compat >= 0.5 && < 0.6
                    , natural >= 0.3.0.3
                    , alphachar
                    , digit
                    , containers
                    
  ghc-options:
                    -Wall
                    
  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Casr.Logbook
                    Data.Aviation.Casr.Logbook.Types
                    Data.Aviation.Casr.Logbook.Types.Aircraft
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AeroplaneDesignFeature
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AeroplaneDesignFeatures
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Aircraft
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AircraftCategory
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AircraftRegistration
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AirshipDesignFeature
                    Data.Aviation.Casr.Logbook.Types.Aircraft.AirshipDesignFeatures
                    Data.Aviation.Casr.Logbook.Types.Aircraft.CASARegistration
                    Data.Aviation.Casr.Logbook.Types.Aircraft.DecDigits4
                    Data.Aviation.Casr.Logbook.Types.Aircraft.GyroplaneDesignFeature
                    Data.Aviation.Casr.Logbook.Types.Aircraft.GyroplaneDesignFeatures
                    Data.Aviation.Casr.Logbook.Types.Aircraft.HelicopterDesignFeature
                    Data.Aviation.Casr.Logbook.Types.Aircraft.HelicopterDesignFeatures
                    Data.Aviation.Casr.Logbook.Types.Aircraft.LandingGear
                    Data.Aviation.Casr.Logbook.Types.Aircraft.MTOW
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.ElectricType
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.Engine
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.EngineType
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.InternalCombustionEngine
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.InternalCombustionEngineAirInduction
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.InternalCombustionEngineFuelInduction
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.InternalCombustionEngineIgnition
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.InternalCombustionEngineType
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.JetType
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.PistonEngine
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.PistonEngineConfiguration
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.PistonEngineCycle
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.Propulsion
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.Propulsions
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.Propulsions1
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.PropulsionPosition
                    Data.Aviation.Casr.Logbook.Types.Aircraft.Propulsion.RotaryEngine
                    Data.Aviation.Casr.Logbook.Types.Aircraft.RAAusRegistration
                    Data.Aviation.Casr.Logbook.Types.Aircraft.RAAusRegistrationPrefix
                    Data.Aviation.Casr.Logbook.Types.Aircraft.RAAusRegistrationType
                    Data.Aviation.Casr.Logbook.Types.Aircraft.RPACategory
                    Data.Aviation.Casr.Logbook.Types.Media
                    
executable          logbook
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , logbook

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src-exe

test-suite          tests

  build-depends:      QuickCheck >=2.9.2 && <2.13
                    , base >=4.8 && < 5
                    , checkers >=0.4.6 && <0.5
                    , logbook
                    , lens >=4 && <4.18
                    , tasty >=0.11 && <1.2
                    , tasty-hunit >=0.9 && <0.11
                    , tasty-quickcheck >=0.8.4 && <0.11

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
